# rethinking-pyro

./: environment.yml  pyproject.toml  test_pryo2.ipynb  test_pyro.ipynb  test_pyro.py
.lh/: test_pyro.py.json
notebooks/: 00_preface.ipynb  02_small_worlds_and_large_worlds.ipynb
