[tool.poetry]
name = "rethinking-pyro"
version = "0.1.0"
description = ""
authors = ["John Goes <johnwgoes@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.3.0"
pyro-ppl = "^1.7.0"
seaborn = "^0.11.1"
torch = "^1.9.0"
altair = "^4.1.0"
ipykernel = "^6.0.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
